--- a/sagemaker01.ipynb
+++ b/sagemaker01.ipynb
@@ -131,8 +131,7 @@
     "                             silent=0,\n",
     "                             objective='multi:softmax',\n",
     "                             num_class=3,\n",
-    "                             num_round=10\n",
-    ")"
+    "                             num_round=10)"
    ]
   },
   {
