--- a/sagemaker01.ipynb
+++ b/sagemaker01.ipynb
@@ -131,7 +131,8 @@
     "                             silent=0,\n",
     "                             objective='multi:softmax',\n",
     "                             num_class=3,\n",
-    "                             num_round=10)"
+    "                             num_round=10\n",
+    ")"
    ]
   },
   {
@@ -168,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "xgb_predictor = xgb_model.deploy"
+    "xgb_predictor = xgb_model.deploy(initial_instance_count=1, instance_type='ml.m4.xlarge')"
    ]
   }
  ],
