fixing syntax errros

--- a/sagemaker01.ipynb
+++ b/sagemaker01.ipynb
@@ -148,11 +148,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = 's3://{}/{}'.format(bucket_name, 'data/train'\n",
-    "val_data = 's3://{}/{}'.format(bucket_name, 'data/val'\n",
+    "train_data = 's3://{}/{}'.format(bucket_name, 'data/train')\n",
+    "val_data = 's3://{}/{}'.format(bucket_name, 'data/val')\n",
     "\n",
-    "train_channel = sagemaker.session.s3_input(train_data, content_type='testx/csv')\n",
-    "val_channel = sagemaker.session.s3_input(val_data, content_type='testx/csv')\n",
+    "train_channel = sagemaker.session.s3_input(train_data, content_type='text/csv')\n",
+    "val_channel = sagemaker.session.s3_input(val_data, content_type='text/csv')\n",
     "data_channels = {'train': train_channel, 'validation': val_channel}\n",
     "\n",
     "xgb_model.fit(inputs=data_channels)"
