--- a/sagemaker-xgb-01.ipynb
+++ b/sagemaker-xgb-01.ipynb
@@ -13,9 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import urllib.request\n",
-    "urllib.request.urlretrieve('https://archive.ics.uci.edu/static/public/53/iris.zip', 'data.zip')\n",
-    "#urllib.request.urlretrieve('https://www.kaggle.com/datasets/iabhishekofficial/mobile-price-classification/download?datasetVersionNumber=1', 'mobile-price-dataset.zip') "
+    "\n",
+    "#urllib.request.urlretrieve('https://www.kaggle.com/datasets/iabhishekofficial/mobile-price-classification/download?datasetVersionNumber=1', 'mobile-price-dataset.zip') import urllib.request\n",
+    "urllib.request.urlretrieve('https://archive.ics.uci.edu/static/public/53/iris.zip', 'data.zip')"
    ]
   },
   {
@@ -172,6 +172,14 @@
    "outputs": [],
    "source": [
     "xgb_predictor = xgb_model.deploy(initial_instance_count=1, instance_type='ml.m4.xlarge')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Test the deployed model using Lambda \n",
+    "## 2. Test the deployed model using API gateway and POSTMAN"
    ]
   }
  ],
